[package]
name = "somedb"
version = "1.0.0"
authors = ["Amit Hendin <amit.hendin@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
csv = "1.1.4"
threadpool = "1.8.1"
sequencetree = "0.1.4"

[profile.release]
opt-level = 3